@@ -24,8 +24,7 @@
 /**
  * @test
  * @summary StressStackOverflow the recovery path for ScopedValue
- * @modules jdk.incubator.concurrent
- * @compile StressStackOverflow.java
+ * @enablePreview
  * @run main/othervm/timeout=300 -XX:-TieredCompilation StressStackOverflow
  * @run main/othervm/timeout=300 -XX:TieredStopAtLevel=1 StressStackOverflow
  * @run main/othervm/timeout=300 StressStackOverflow
@@ -34,9 +33,9 @@
 import java.util.concurrent.Callable;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.ThreadLocalRandom;
-import jdk.incubator.concurrent.ScopedValue;
-import jdk.incubator.concurrent.StructureViolationException;
-import jdk.incubator.concurrent.StructuredTaskScope;
+import java.util.concurrent.StructureViolationException;
+import java.util.concurrent.StructuredTaskScope;
+import java.util.function.Supplier;
 
 public class StressStackOverflow {
     public static final ScopedValue<Integer> el = ScopedValue.newInstance();
@@ -53,9 +52,16 @@ public class StressStackOverflow {
 
     // Test the ScopedValue recovery mechanism for stack overflows. We implement both Callable
     // and Runnable interfaces. Which one gets tested depends on the constructor argument.
-    class DeepRecursion implements Callable, Runnable {
+    class DeepRecursion implements Callable, Supplier, Runnable {
 
-        static enum Behaviour {CALL, RUN}
+        static enum Behaviour {
+            CALL, GET, RUN;
+            private static Behaviour[] values = values();
+            public static Behaviour choose(ThreadLocalRandom tlr) {
+                return values[tlr.nextInt(3)];
+            }
+        }
+
         final Behaviour behaviour;
 
         public DeepRecursion(Behaviour behaviour) {
@@ -70,6 +76,8 @@ public class StressStackOverflow {
                 switch (behaviour) {
                     case CALL ->
                         ScopedValue.where(el, el.get() + 1).call(() -> fibonacci_pad(20, this));
+                    case GET ->
+                        ScopedValue.where(el, el.get() + 1).get(() -> fibonacci_pad(20, this));
                     case RUN ->
                         ScopedValue.where(el, el.get() + 1).run(() -> fibonacci_pad(20, this));
                 }
@@ -96,9 +104,13 @@ public class StressStackOverflow {
             Thread.yield();
         }
 
-        public Object call() {
+        public Object get() {
             run();
             return null;
+        }
+
+        public Object call() {
+            return get();
         }
     }
 
@@ -142,12 +154,12 @@ public class StressStackOverflow {
         var threadFactory
                 = (tlr.nextBoolean() ? Thread.ofPlatform() : Thread.ofVirtual()).factory();
         try (var scope = new StructuredTaskScope<Object>("", threadFactory)) {
-            var future = scope.fork(() -> {
+            var handle = scope.fork(() -> {
                 op.run();
                 return null;
             });
-            future.get();
             scope.join();
+            handle.get();
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -159,9 +171,9 @@ public class StressStackOverflow {
                 try (var scope = new StructuredTaskScope<Object>()) {
                     try {
                         if (tlr.nextBoolean()) {
-                            // Repeatedly test Scoped Values set by ScopedValue::call() and ScopedValue::run()
+                            // Repeatedly test Scoped Values set by ScopedValue::call(), get(), and run()
                             final var deepRecursion
-                                    = new DeepRecursion(tlr.nextBoolean() ? DeepRecursion.Behaviour.CALL : DeepRecursion.Behaviour.RUN);
+                                = new DeepRecursion(DeepRecursion.Behaviour.choose(tlr));
                             deepRecursion.run();
                         } else {
                             // Recursively run ourself until we get a stack overflow
