@@ -23,14 +23,14 @@
 
 /*
  * @test
- * @bug 8284199
+ * @bug 8284199 8296779 8306647
  * @summary Test thread dumps with StructuredTaskScope
- * @modules jdk.incubator.concurrent
+ * @enablePreview
  * @library /test/lib
  * @run junit/othervm StructuredThreadDumpTest
  */
 
-import jdk.incubator.concurrent.StructuredTaskScope;
+import java.util.concurrent.StructuredTaskScope;
 import java.io.IOException;
 import java.lang.management.ManagementFactory;
 import java.nio.file.Files;
