@@ -23,15 +23,15 @@
 
 /*
  * @test
+ * @bug 8284199 8296779 8306647
  * @summary Basic tests for StructuredTaskScope with scoped values
- * @modules jdk.incubator.concurrent
+ * @enablePreview
  * @run junit WithScopedValue
  */
 
-import jdk.incubator.concurrent.ScopedValue;
-import jdk.incubator.concurrent.StructuredTaskScope;
-import jdk.incubator.concurrent.StructureViolationException;
-import java.util.concurrent.Future;
+import java.util.concurrent.StructuredTaskScope;
+import java.util.concurrent.StructuredTaskScope.Subtask;
+import java.util.concurrent.StructureViolationException;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Stream;
@@ -54,13 +54,13 @@ class WithScopedValue {
     @MethodSource("factories")
     void testForkInheritsScopedValue1(ThreadFactory factory) throws Exception {
         ScopedValue<String> name = ScopedValue.newInstance();
-        String value = ScopedValue.where(name, "x", () -> {
+        String value = ScopedValue.callWhere(name, "x", () -> {
             try (var scope = new StructuredTaskScope<String>(null, factory)) {
-                Future<String> future = scope.fork(() -> {
+                Subtask<String> subtask = scope.fork(() -> {
                     return name.get(); // child should read "x"
                 });
                 scope.join();
-                return future.resultNow();
+                return subtask.get();
             }
         });
         assertEquals(value, "x");
@@ -73,19 +73,19 @@ class WithScopedValue {
     @MethodSource("factories")
     void testForkInheritsScopedValue2(ThreadFactory factory) throws Exception {
         ScopedValue<String> name = ScopedValue.newInstance();
-        String value = ScopedValue.where(name, "x", () -> {
+        String value = ScopedValue.callWhere(name, "x", () -> {
             try (var scope1 = new StructuredTaskScope<String>(null, factory)) {
-                Future<String> future1 = scope1.fork(() -> {
+                Subtask<String> subtask1 = scope1.fork(() -> {
                     try (var scope2 = new StructuredTaskScope<String>(null, factory)) {
-                        Future<String> future2 = scope2.fork(() -> {
+                        Subtask<String> subtask2 = scope2.fork(() -> {
                             return name.get(); // grandchild should read "x"
                         });
                         scope2.join();
-                        return future2.resultNow();
+                        return subtask2.get();
                     }
                 });
                 scope1.join();
-                return future1.resultNow();
+                return subtask1.get();
             }
         });
         assertEquals(value, "x");
@@ -98,19 +98,19 @@ class WithScopedValue {
     @MethodSource("factories")
     void testForkInheritsScopedValue3(ThreadFactory factory) throws Exception {
         ScopedValue<String> name = ScopedValue.newInstance();
-        String value = ScopedValue.where(name, "x", () -> {
+        String value = ScopedValue.callWhere(name, "x", () -> {
             try (var scope1 = new StructuredTaskScope<String>(null, factory)) {
-                Future<String> future1 = scope1.fork(() -> {
+                Subtask<String> subtask1 = scope1.fork(() -> {
                     assertEquals(name.get(), "x");  // child should read "x"
 
                     // rebind name to "y"
-                    String grandchildValue = ScopedValue.where(name, "y", () -> {
+                    String grandchildValue = ScopedValue.callWhere(name, "y", () -> {
                         try (var scope2 = new StructuredTaskScope<String>(null, factory)) {
-                            Future<String> future2 = scope2.fork(() -> {
+                            Subtask<String> subtask2 = scope2.fork(() -> {
                                 return name.get(); // grandchild should read "y"
                             });
                             scope2.join();
-                            return future2.resultNow();
+                            return subtask2.get();
                         }
                     });
 
@@ -118,7 +118,7 @@ class WithScopedValue {
                     return grandchildValue;
                 });
                 scope1.join();
-                return future1.resultNow();
+                return subtask1.get();
             }
         });
         assertEquals(value, "y");
@@ -136,23 +136,22 @@ class WithScopedValue {
         var box = new Box();
         try {
             try {
-                ScopedValue.where(name, "x", () -> {
+                ScopedValue.runWhere(name, "x", () -> {
                     box.scope = new StructuredTaskScope<Object>();
                 });
                 fail();
             } catch (StructureViolationException expected) { }
 
-            // underlying flock should be closed, fork should return a cancelled task
+            // underlying flock should be closed and fork should fail to start a thread
             StructuredTaskScope<Object> scope = box.scope;
             AtomicBoolean ran = new AtomicBoolean();
-            Future<Object> future = scope.fork(() -> {
+            Subtask<Object> subtask = scope.fork(() -> {
                 ran.set(true);
                 return null;
             });
-            assertTrue(future.isCancelled());
             scope.join();
+            assertEquals(Subtask.State.UNAVAILABLE, subtask.state());
             assertFalse(ran.get());
-
         } finally {
             StructuredTaskScope<Object> scope = box.scope;
             if (scope != null) {
@@ -168,7 +167,7 @@ class WithScopedValue {
     void testStructureViolation2() throws Exception {
         ScopedValue<String> name = ScopedValue.newInstance();
         try (var scope = new StructuredTaskScope<String>()) {
-            ScopedValue.where(name, "x", () -> {
+            ScopedValue.runWhere(name, "x", () -> {
                 assertThrows(StructureViolationException.class, scope::close);
             });
         }
@@ -181,7 +180,7 @@ class WithScopedValue {
     void testStructureViolation3() throws Exception {
         ScopedValue<String> name = ScopedValue.newInstance();
         try (var scope = new StructuredTaskScope<String>()) {
-            ScopedValue.where(name, "x", () -> {
+            ScopedValue.runWhere(name, "x", () -> {
                 assertThrows(StructureViolationException.class,
                         () -> scope.fork(() -> "foo"));
             });
@@ -197,9 +196,9 @@ class WithScopedValue {
         ScopedValue<String> name2 = ScopedValue.newInstance();
 
         // rebind
-        ScopedValue.where(name1, "x", () -> {
+        ScopedValue.runWhere(name1, "x", () -> {
             try (var scope = new StructuredTaskScope<String>()) {
-                ScopedValue.where(name1, "y", () -> {
+                ScopedValue.runWhere(name1, "y", () -> {
                     assertThrows(StructureViolationException.class,
                             () -> scope.fork(() -> "foo"));
                 });
@@ -207,9 +206,9 @@ class WithScopedValue {
         });
 
         // new binding
-        ScopedValue.where(name1, "x", () -> {
+        ScopedValue.runWhere(name1, "x", () -> {
             try (var scope = new StructuredTaskScope<String>()) {
-                ScopedValue.where(name2, "y", () -> {
+                ScopedValue.runWhere(name2, "y", () -> {
                     assertThrows(StructureViolationException.class,
                             () -> scope.fork(() -> "foo"));
                 });
